--- a/404.css
+++ b/404.css
@@ -13,5 +13,23 @@ body {
   }
 
   .input-choice {
+      display: inline-block;
       color:white;
+      border: green 1px;
+      border-style: solid;
+      padding: 5px;
+      min-width: 40px;
+      text-align: center;
+  }
+
+  .input-choice:hover {
+    background-color: green;
+    cursor: pointer;
+  }
+
+  .answer,
+  .answer:hover {
+      background-color:white;
+      color:green;
+      cursor: none;
   }
